force-app/main/default/objects/FEC_Sub_Code__c/FEC_Sub_Code__c.object-meta.xml
<CustomObject>
    <label>FEC_Sub Code</label>
    <nameField>
        <label>FEC_Sub Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC_Sub Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>