force-app/main/default/objects/FEC_Sub_Code__c/fields/FEC_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>FEC_Name_VN__c</fullName>
    <description>Tên tiếng Việt của danh mục con</description>
    <label>Name VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>