force-app/main/default/objects/FEC_Sub_Code__c/listViews/All_Sub_Codes.listView-meta.xml
<ListView>
    <fullName>All_Sub_Codes</fullName>
    <columns>NAME</columns>
    <columns>FEC_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Sub Codes</label>
</ListView>